--- a/bootstrap-4.5.2-dist/bootstrap-4.5.2-dist/css/responsive.css
+++ b/bootstrap-4.5.2-dist/bootstrap-4.5.2-dist/css/responsive.css
@@ -1,5 +1,11 @@
 @media (min-width: 320px) and (max-width:990px) { 
-    
+    * {
+        border:  1px solid red;
+    }
+    body {
+        position: relative;
+        overflow-x: hidden;
+    }
    span , .navbar-toggler-icon{
        font-size: 35px;
        outline-style: none;
@@ -11,12 +17,19 @@
         font-family: 'Underdog', cursive;
         
     }
+    .header{
+        position: relative;
+        display: flex;
+    }
     .hero{
-        width: 400px;
-        height: 300px;
+        width: 100%;
+        height: 500px;
         margin: 20px;
     }
-
+    .hero img {
+        width: 100%;
+        /* height: 100%; */
+    }
     .hero-2{
         background: url(../../../img/about.png);
         background-size: cover;
