--- a/bootstrap-4.5.2-dist/bootstrap-4.5.2-dist/css/responsive.css
+++ b/bootstrap-4.5.2-dist/bootstrap-4.5.2-dist/css/responsive.css
@@ -1,7 +1,7 @@
 @media (min-width: 320px) and (max-width:990px) { 
-    * {
+    /* * {
         border:  1px solid red;
-    }
+    } */
     body {
         position: relative;
         overflow-x: hidden;
@@ -30,19 +30,52 @@
         width: 100%;
         /* height: 100%; */
     }
+    .about{
+        position: relative;
+        height: 700px;
+    }
     .hero-2{
         background: url(../../../img/about.png);
         background-size: cover;
         background-repeat: no-repeat;
         height: 320px;
-        width: 455px;
+        width: 100%;
+        transform: rotate(90deg);
+    }
+    .hero-2 h1{
+        transform: rotate(-90deg);
+        margin-left: 20px;
+    }
+    .branding-1 ul li {
+        font-size: 15px;
+     
     }
     .skill {
-        min-height: 1500px;
+        height: 1500px;
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: column;
     }
+    .skill-html span {
+        margin-left: 50%;
+        font-size: 15px;
+    }
+    .skill-css span {
+        font-size: 15px;
+        margin-left: 60%;
+    }
+    .skill-js span {
+        font-size: 15px;
+        margin-left: 38%;
+    }
+    
     .skill-2{
         padding-left: 20px;
         margin-top: 10px;
+        position: relative;
+        margin-top: 310px;
+        overflow: hidden;
+       
     }
     .skill-box-2,
     .skill-box-4 {
@@ -50,18 +83,43 @@
         bottom: 0;
         right: 0;
     }
+
+    .sb {
+        width: 40%;
+        height: 30%;
+    }
+    .sb h4 {
+        text-align: center;
+    }
+    .sb a i {
+        font-size: 35px;
+        margin-left: 30px;
+    }
     iframe {
         width: 100%;
         padding-bottom: 100px;
     }
-    footer{
-        background-color: rgb(28, 29, 77);
+   
+    .last {
+        height: 50px;
         position: relative;
-        bottom: -360px;
+        bottom: -1000px;
         left: 0;
-    
-    
+        overflow: hidden;
     }
+    footer span h4{
+        font-size: 18px;
+        color: wheat;
+        padding-top: 0px;
+        position: absolute;
+        bottom: 10%;
+        left: 20%;
+    }
+    footer span a {
+        color: white;
+        text-decoration: none;
+    }
+    
     .btn-primary {
         background-color: rgb(34, 34, 102);
         
@@ -71,8 +129,11 @@
     }
     .h-box  {
         width: 60%;
-        margin-left: 100px;
+        margin-left: 20%;
         margin-top: 20px;
     }
+    #myBtn {
+        bottom: 70px; 
+      }
 
  }
