--- a/bootstrap-4.5.2-dist/bootstrap-4.5.2-dist/css/responsive.css
+++ b/bootstrap-4.5.2-dist/bootstrap-4.5.2-dist/css/responsive.css
@@ -49,7 +49,6 @@
         display: inline-block;
         padding-left: 30px;
         padding-top: 15px;
-        margin-left: 5%;
     }
     
     .hero-2{
@@ -62,7 +61,8 @@
     }
     .hero-2 h1{
         transform: rotate(-90deg);
-        margin-left: 45%;
+        margin-left: 30%;
+        font-size: 30px;
     }
     .skill {
         height: 1500px;
@@ -71,16 +71,16 @@
         flex-direction: column;
     }
     .skill-html span {
-        margin-left: 70%;
+        margin-left: 82%;
         font-size: 15px;
     }
     .skill-css span {
         font-size: 15px;
-        margin-left: 75%;
+        margin-left: 67%;
     }
     .skill-js span {
         font-size: 15px;
-        margin-left: 62%;
+        margin-left: 50%;
     }
     
     .skill-2{
@@ -94,7 +94,7 @@
     .skill-box-2,
     .skill-box-4 {
         position: absolute;
-        bottom: 0;
+        bottom: 10%;
         right: 10%;
     }
 
