--- a/assets/responsive.css
+++ b/assets/responsive.css
@@ -18,23 +18,25 @@
         font-family: 'Underdog', cursive;
         
     }
+ 
+    .navbar .navbar-nav{
+        padding-left: 0%;
+    }
+    
     .header{
-        position: relative;
-        display: flex;
-        margin-bottom: 50px;
+       height: 200vh;
+        margin-bottom: 20px;
     }
-    .hero{
-        width: 90%;
-        height: 300px;
-        margin: 10px;
-    }
-    .hero img {
+   .header .hero{
         width: 100%;
-        /* height: 100%; */
+        height: 500px;
+        background-color: rgb(214, 195, 88);
+        border-top-right-radius: 80%;
+        border-bottom-left-radius: 90%;
     }
     .about{
         position: relative;
-       
+
     }
     
     .aboutme h2 {
@@ -42,30 +44,29 @@
         margin-top: 80px;
     }
     
-    .branding-1 ul li {
+    .branding-1 ul  {
         list-style: none;
         text-decoration: none;
-        font-size: 32px;
+        font-size: 30px;
         display: inline-block;
-        padding-left: 30px;
-        padding-top: 15px;
+        padding: 2%;
     }
     
-    .hero-2{
-        background: url(../../../img/about.png);
-        background-size: cover;
-        background-repeat: no-repeat;
-        height: 100%;
-        width: 100%;
-        transform: rotate(180deg);
+   .about .hero-2{
+        height: 90%;
+        width: 110%;
         position: relative;
-        top: 0;
-        left: -20px;
+        top: 10%;
+        left: 0;
     }
-    .hero-2 h1{
-        transform: rotate(170deg);
+    .hero-2 h1 strong{
+        transform: rotate(-390deg);
         font-size: 30px;
     }
+    .abouth {
+        display: none;
+    }
+    
     .skill {
         height: 1500px;
         display: flex;
