--- a/assets/style.css
+++ b/assets/style.css
@@ -31,6 +31,9 @@ h6{
     font-family: 'Underdog', cursive;
     
 }
+.navbar-nav{
+    padding-left: 50%;
+}
 .navbar-brand  {
     font-family: 'Aref Ruqaa', serif;
     font-size: 1.2em;
@@ -258,6 +261,7 @@ h6{
     background-position: 0px 180px;
     z-index: -1;
     height: 500px;
+    margin-left: 5%;
 }
 .sb {
     border-radius: 10px;
@@ -306,12 +310,10 @@ h6{
     top: 0;
     left: 0;
 }
-.herop{
-    width: 600px;
-}
+
 .herop img {
     width: 100%;
-    height: 300px;
+    height: 100%;
     border-radius: 10px;
 }
 
