--- a/assets/style.css
+++ b/assets/style.css
@@ -143,7 +143,7 @@ h6{
 
 
 .hero-2{
-    background: url(../../../img/about.png);
+    background: url(../img/about.png);
     background-size: cover;
     background-repeat: no-repeat;
     height: 353px;
