--- a/assets/style.css
+++ b/assets/style.css
@@ -136,7 +136,10 @@ body {
 .about{
     position: relative;
     min-height: 100vh;
-    background: url('../img/location.jpg');
+    background-image:url('../img/location.jpg') ;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    object-fit: cover;
 }
 .svg-gel {
     position: absolute;
@@ -148,7 +151,7 @@ body {
     background-color: #0e0d0d;
     top: 15%;
     position: absolute;
-    width: 80%;
+    width: 84%;
     z-index: 9090;
     border-radius: 10px;
     height: 80%;
