--- a/assets/style.css
+++ b/assets/style.css
@@ -121,13 +121,18 @@ body {
     transition: 0.8s;
 }
 .h-box:hover{
-    transform: translateY(-30px);
+    transform: translateY(-20px);
     cursor: pointer;
 }
 .fa-laptop-code
 ,.fa-laptop-medical
 ,.fa-laptop-house{
    font-size: 30px;
+}
+.branding-1 .fab:hover{
+    transition: all 0.5s;
+    color: #fff;
+    transform: translateY(-10px);
 }
 
 
@@ -220,7 +225,21 @@ h6.label-h6{
     position: relative;
     overflow: hidden;
     height: 100vh;
+    /* background-color: rgb(216, 181, 24); */
 }
+.skewed {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(216, 181, 24);
+    z-index: -1;
+    transform: skewY(-26deg);
+    transform-origin: top left;
+  }
 .skill-1 {
     margin-top: 180px;
     margin-left: 40px;
@@ -270,6 +289,7 @@ h6.label-h6{
     width: 200px;
     height: 200px;
     position: absolute;
+    background-color: rgb(255, 255, 255);
 }
 .sb h4 {
     text-align: center;
@@ -340,7 +360,7 @@ iframe {
 
 /* Footer */
 footer{
-    background-color: rgb(28, 29, 77);
+    background-color: #0e0d0d;
     position: relative;
     bottom: 0;
     left: 0;
