--- a/assets/style.css
+++ b/assets/style.css
@@ -140,12 +140,28 @@ body {
 
 .about{
     position: relative;
-    min-height: 100vh;
+    min-height: 120vh;
     background-image:url('../img/location.jpg') ;
     background-attachment: fixed;
     background-repeat: no-repeat;
     object-fit: cover;
 }
+.about-title{
+    transform: rotate(-45deg);
+    background-color:  rgb(216, 181, 24);
+    position: absolute;
+    z-index: 909090;
+    top: 8%;
+    left: -5%;
+    border-radius: 5px;
+    width: 25%;
+    text-align: center;
+}
+
+.about-title h1{
+   font-size: 1.8em;
+}
+
 .svg-gel {
     position: absolute;
     bottom: 0;
@@ -153,6 +169,7 @@ body {
     width: 100%;
 }
 .container-about{
+    overflow: hidden;
     background-color: #0e0d0d;
     top: 15%;
     position: absolute;
@@ -168,13 +185,14 @@ body {
 
 }
 .about h2{
-    font-family: 'Kaisei HarunoUmi', serif;
+    font-family: 'Roboto', sans-serif;
     font-weight: 500;
     font-size: 2.5em;
     color: #f8f7f7;
 }
 .about h6{
-    line-height: 1.5;
+    line-height: 140%;
+    letter-spacing: 2px;
     color: #a7a7a7;
     font-family: 'Roboto', sans-serif;
 }
@@ -241,34 +259,31 @@ h6.label-h6{
     transform-origin: top left;
   }
 .skill-1 {
-    margin-top: 180px;
+    margin-top: 30%;
     margin-left: 40px;
     position: relative;
     height: 100vh;
+    font-family: 'Rubik', sans-serif;
 }
 .skill-1 h4{
-    font-size: 20px;
-    font-family: 'Aref Ruqaa', serif;
+    font-size: 2.5em;
+    font-family: 'Rubik', sans-serif;
+    text-shadow: 2px 2px #2475f0;
+}
+.skill-css{
+    margin-left: 10%;
+}
+.skill-js{
+    margin-left: 20%;
 }
 .skill-he{
     top: 30px;
     left: -50px;
 }
 .skill-1 h2 {
-    font-family: 'Aref Ruqaa', serif;
+    font-family: 'Rubik', sans-serif;
 }
-.skill-he::before{
-    left: -130%;
-}
-.skill-html span {
-    margin-left: 270px;
-}
-.skill-css span {
-    margin-left: 295px;
-}
-.skill-js span {
-    margin-left: 243px;
-}
+
 
 
 /* Skill-2 */
@@ -321,41 +336,142 @@ h6.label-h6{
 
 /* Portfolio */
 
-.portfolio h1 {
-    margin-bottom: 30px;
-    font-family: 'Aref Ruqaa', serif;
-}
-.port-row {
+.portfolio{
+    background-color: #0e0d0d;
+    min-height: 110vh;
     position: relative;
-    top: 0;
-    left: 0;
 }
-
+.portfolio-title{
+    background-color:  rgb(216, 181, 24);
+    position: absolute;
+    top: 10%;
+    right: 10%;
+    border-radius: 5px;
+}
+.portfolio h1 {
+    margin-bottom: 20px;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 800;
+    font-size: 2.7em;
+    color: #fff;
+    vertical-align:text-bottom;
+}
+.container-portfolio{
+    height: 85vh;
+    width: 100%;
+    background-color: rgb(216, 181, 24);
+    border-radius: 5px;
+    box-shadow: 5px 5px 20px rgba(255, 255, 255, 0.5);
+    margin-top: 10%;
+}
 .herop img {
     width: 100%;
     height: 100%;
-    border-radius: 10px;
+    border-radius: 5px;
+    opacity: 0.8;
+}
+.img-b{
+    overflow: hidden;
+    border-radius: 5px;
+}
+.herop a img:hover{
+    background-color: rgb(131, 8, 8);
+    transform: scale(1.03) rotate(0.5deg);
+    transition: .6s ease-in-out;
+    opacity: 1;
+    /* opacity: 0; */
+    /* content: "";
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0; */
+    /* opacity: 1; */
+    /* transition: opacity .3s ease-in-out; */
 }
 
 /* Contact */
 .contact {
-    height: 100vh;
-    font-family: 'Aref Ruqaa', serif;
+    /* height: 100vh; */
+    position: relative;
 }
-
+.contact-sec{
+    background-color: rgb(216, 181, 24);
+    border-radius: 5px;
+    margin-left: 1%;
+    margin: 5% 0;
+}
 .contact h1{
-    margin-bottom: 30px;
-    font-family: 'Aref Ruqaa', serif;
-}
-.contact button {
-    margin-left: 15px;
-    width: 100px;
+    margin: 4% 0;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 800;
+    font-size: 2.8em;
 }
 
+.label-contact{
+    margin-top: 2%;
+    font-size: 0.8em;
+    font-family: 'Roboto', sans-serif;
+}
+.input-contact{
+    background: none;
+    border-top: none;
+    border-right: none;
+    border-left: none;
+    outline: none;
+    border-bottom: 2px solid rgb(161, 153, 34);
+    font-family: 'Roboto', sans-serif;
+    font-size: 0.5em;
+    padding-top: 5%;
+    padding: 5% 0 2%;
+}
+.input-contact.textarea{
+    height: 200px;
+}
+.contact-btn{
+    color: #fff;
+    background-color: rgb(247, 205, 21);
+    text-align: center;
+    padding: 10px 40px;
+    cursor: pointer;
+    vertical-align: middle;
+    text-decoration: none;
+    transition: all .2s linear;
+    margin-bottom: 17px;
+    display: block;
+    width: 65%;
+    line-height: 35px;
+    border: 2px solid rgb(247, 205, 21);
+    border-radius: 50px;
+    font-size: 14px;
+    letter-spacing: 2px;
+    box-sizing: border-box;
+}
+.contact-btn:hover{
+    background-color: rgb(223, 186, 21);
+}
+
+.title-contact{
+    font-size: 2.7em;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 800;
+}
+.one_half h5{
+    font-family: 'Rubik', sans-serif;
+    color: #a7a7a7;
+    font-weight: 400;
+    line-height: 170%;
+    margin-top: 10%;
+}
+.maps{
+    border-radius: 4px;
+    border: 5px solid black;
+    box-shadow: 5px 5px 15px rgba(105, 103, 103, 0.5) ;
+}
 iframe {
-    border-radius: 10px;
+    width: 100%;
 }
-
 
 
 /* Footer */
@@ -371,19 +487,12 @@ footer span h4 {
     color: white;
     font-family: 'Aref Ruqaa', serif;
     letter-spacing: 2px;
-font-size: 20px;
+    font-size: 20px;
 }
 footer span a {
     color: white;
-}
-footer span a:hover {
-    
     text-decoration: none;
 }
-
-
-
-
 
 /* BUTTON SCROLL TOP */
 #myBtn {
@@ -408,7 +517,6 @@ footer span a:hover {
   #myBtn:hover {
     background-color: #555; /* Add a dark-grey background on hover */
   }
-  
 /* ANIMATION */
 
 p {
@@ -418,7 +526,6 @@ p {
     animation: animate 5s linear infinite;
     border-radius: 50%;
 }
-
 @keyframes animate {
     0%{
         transform: scale(0) translateY(0) rotate(0deg);
@@ -436,4 +543,3 @@ p {
     }
 
 }
-
