--- a/assets/responsive.css
+++ b/assets/responsive.css
@@ -26,7 +26,7 @@
     .header{
         position: relative;
         background-color: rgb(216, 181, 24);
-        min-height: 220vh;
+        min-height: 190vh;
     }
     .hero img {
         width: 100%;
@@ -36,7 +36,7 @@
     }
     .box {
         top: 60%;
-        left: 15%;
+        left: 18%;
         width: 70%;
     }
     .h-box{ 
@@ -45,17 +45,20 @@
 
     /* About */
     .about{
-        min-height: 170vh;
+        min-height: 150vh;
         width: 100%;
     }
     .about-title{
-        top: 5%;
+        top: 3%;
         left: -10%;
         border-radius: 5px;
         width: 45%;
     }
     .about-title h1 {
         font-size: 1.5em;
+    }
+    .about .container-about h2{
+        padding-top: 20%;
     }
     .profile-text{
      margin-top: 10%; 
@@ -65,7 +68,7 @@
     }
    .bio-about{
        display: flex;
-       margin-left: 10%;
+       margin-left: 2%;
    }
    .form-label{
        margin-right: 10%;
@@ -78,7 +81,7 @@
     .skill {
         position: relative;
         overflow: hidden;
-        height: 220vh;
+        height: 130vh;
         width: 100%;
         /* background-color: rgb(216, 181, 24); */
     }
@@ -127,28 +130,35 @@
    /* Skill-2 */
   
     .skill-2 {
-        position: relative;
-        margin-top: 100px;
+        position: absolute;
+        top: 60%;
+        margin-top: 0;
         background: url(../../../img/buble.png);
         background-repeat: no-repeat;
         background-position: 100px -50px;
     }
     
     .sb {
-        top: -40%;
+        top: -10%;
+        width: 160px;
+        height: 160px;
     }
-    
+    .sb a i {
+        font-size: 50px;
+        margin-left: 50px;
+        margin-top: 10px;
+    }
     .skill-box-4 {
         color: rgb(245, 235, 235);
-        top: 15%;
+        top: 35%;
         right:  10%;
     }
     .skill-box-2 {
-        top: -30%;
+        top: 0;
         right: 10%;
     }
     .skill-box-3 {
-        top: 5%;
+        top: 25%;
         left: 0;
     }
 
@@ -156,33 +166,34 @@
 
     .portfolio{
         background-color: #0e0d0d;
-        min-height: 280vh;
+        min-height: 180vh;
         position: relative;
     }
     
     .container-portfolio{
-        height: 100%;
+        height: 170vh;
         position: relative;
     }
     .port-responsive{
-        background-color: #0e0d0d;
-        height: 3%;
-        width: 60%;
+        background-color: rgb(0, 0, 0);
+        margin: 5% 0;
+        border-radius: 0;
+        position: absolute;
         transform: rotate(0deg);
         top: 5%;
-        left: -15%;
-        z-index: 878687687;
+        left: 0;
+        width: 100%;
+        border-radius: 5px;
+        z-index: 12121212;
     }
     .port-responsive h1{
-        padding-top: 2%;
-        font-family: 'Roboto', sans-serif;
-        font-weight: 800;
-        font-size: 1.5em;
-        color: #fff;
+        padding-top: 5%;
         text-align: center;
+        border-radius: 0;
     }
-    .herop{
-        margin-top: 15%;
+    .ro-herop{
+     position: absolute;
+     top: 10%;
     }
     
 
