--- a/assets/responsive.css
+++ b/assets/responsive.css
@@ -248,8 +248,26 @@
 
  }
 
- @media (max-width: 1024px) and (min-width: 601px) {
+ @media screen and (min-width: 601px) and (max-width: 850px)  {
 
+    /* Navbar */
+    span , .navbar-toggler-icon{
+        font-size: 35px;
+        outline-style: none;
+        margin-top: 10px;
+     }
+    span , .navbar-toggler-icon .fa, .fas {
+     color: rgb(214, 195, 88);
+     }
+     .navbar-nav {
+        padding-left:0;
+    }
+     .navbar-nav .nav-link {
+       margin: 2px 2px 10px;
+       padding: 1px;
+       font-family: 'Kaisei HarunoUmi', serif;
+       font-size: 1.1em;
+    }
     /* header */
 
     .header{
@@ -259,14 +277,8 @@
         display: flex;
         flex-direction: row;
     }
-    .hero img {
-        width: 100%;
-    }
-    .hero{
-        width: 100%;
-    }
     .box {
-        top: 60%;
+        top: 30%;
         left:0;
         width: 100%;
     }
