--- a/assets/responsive.css
+++ b/assets/responsive.css
@@ -248,30 +248,20 @@
 
  }
 
- @media screen and (min-width: 601px) and (max-width: 990px)  {
+ @media screen and (min-width: 768px) and (max-width: 990px)  {
 
-    /* * {
+    * {
         border: 2px solid red;
-    } */
+    }
     /* Navbar */
     
-    span , .navbar-toggler-icon{
-        font-size: 35px;
-        outline-style: none;
-        margin-top: 10px;
-     }
     span , .navbar-toggler-icon .fa, .fas {
      color: rgb(214, 195, 88);
      }
      .navbar-nav {
         padding-left:0;
     }
-     .navbar-nav .nav-link {
-       margin: 2px 2px 10px;
-       padding: 1px;
-       font-family: 'Kaisei HarunoUmi', serif;
-       font-size: 1.1em;
-    }
+  
     /* header */
 
     .header{
@@ -279,18 +269,56 @@
         width: 100%;
         overflow: hidden;
         background-color: rgb(216, 181, 24);
-        min-height: 100vh;
+        min-height: 70vh;
         display: flex;
         flex-direction: row;
     }
     .box {
-        top: 30%;
+        top: 50%;
         left:0;
+        width: 90%;
+    }
+    .hero img {
         width: 100%;
+    }
+    .hero{
+        width: 90%;
     }
     .h-box{ 
         margin-top: 10%;
         align-items: center;
     }
+
+    /* About */
+    .about{
+        min-height: 100vh;
+        width: 100%;
+    }
+    .container-about{
+        width: 90%;   
+        left: 2%; 
+    }
+    .container-about .col-md-8{
+        width: 100%;
+    }
+    .container-about .col-md-8 .respo-ip{
+        margin: auto 10%;
+        width: 100%;
+    }
+    .container-about .branding-ip{
+        position: absolute;
+        top: 70%;
+        left: 20%;
+        width: 100%;
+    }
+    .about .container-about h2{
+        padding-top: 10%;
+    }
+    .profile-text{
+     margin-top: 10%; 
+    }
+   .bio-about{
+       display: flex;
+   }
 
  } 
