--- a/assets/style.css
+++ b/assets/style.css
@@ -83,7 +83,8 @@ body {
 .hero{
     width: 500px;
     height: 400px;
-    background-color: rgba(34, 34, 31, 0.493);
+    /* background-color: rgba(34, 34, 31, 0.493); */
+    background-color: rgba(22, 22, 21, 0.897);
     overflow: hidden;
     border-top-right-radius: 80%;
     border-bottom-left-radius: 90%;
