--- a/assets/style.css
+++ b/assets/style.css
@@ -84,12 +84,12 @@ body {
     width: 500px;
     height: 400px;
     /* background-color: rgba(34, 34, 31, 0.493); */
-    background-color: rgba(22, 22, 21, 0.897);
+    background-color: rgba(21, 21, 22, 0.767);
     overflow: hidden;
     border-top-right-radius: 80%;
     border-bottom-left-radius: 90%;
     position: relative;
-    box-shadow: 0px 2px 15px rgba(108, 160, 25,0.5);
+    box-shadow: 0px 2px 15px rgba(23, 84, 177, 0.767);
     margin-top: 20px;
 }
 .hero img {
