--- a/assets/style.css
+++ b/assets/style.css
@@ -229,6 +229,16 @@ h6.label-h6{
     height: 100vh;
     /* background-color: rgb(216, 181, 24); */
 }
+/* .skill .portfolio-title{
+    background-color: #0e0d0d;
+} */
+.skill h1{
+    font-family: 'Roboto', sans-serif;
+    font-weight: 800;
+    font-size: 2.3em;
+    color: #0e0d0d;
+    /* color: white; */
+}
 .skewed {
     position: absolute;
     top: 0;
@@ -336,7 +346,7 @@ h6.label-h6{
     margin-bottom: 20px;
     font-family: 'Roboto', sans-serif;
     font-weight: 800;
-    font-size: 2.7em;
+    font-size: 2.4em;
     color: #fff;
     vertical-align:text-bottom;
 }
@@ -393,7 +403,7 @@ h6.label-h6{
     margin: 4% 0;
     font-family: 'Roboto', sans-serif;
     font-weight: 800;
-    font-size: 2.8em;
+    font-size: 2.3em;
 }
 
 .label-contact{
