--- a/assets/coba.css
+++ b/assets/coba.css
@@ -1,4 +1,4 @@
-@media screen and (min-width: 320px) and (max-width: 765px){ 
+@media screen and (max-width: 600px) { 
   
     body {
         position: relative;
@@ -16,15 +16,10 @@
         padding-left:0;
     }
      .navbar-nav .nav-link {
-         background-color:  rgb(216, 181, 24);
-         color: #0e0d0d;
-         width: 50%;
-         text-align: center;
-         border-radius: 2%;
-       margin: 1% 25% 2%;
+       margin: 2px 2px 10px;
        padding: 1px;
        font-family: 'Kaisei HarunoUmi', serif;
-       font-size: 1.4em;
+       font-size: 1.1em;
     }
     .header{
         position: relative;
@@ -48,7 +43,7 @@
 
     /* About */
     .about{
-        min-height: 170vh;
+        min-height: 150vh;
         width: 100%;
     }
     .about-title{
@@ -67,26 +62,17 @@
      margin-top: 10%; 
     }
     .container-about{
-        width: 95%; 
-        height: 80%;   
-        top: 5%;
+        width: 95%;    
     }
    .bio-about{
        display: flex;
-       margin-left: 10%;
    }
-   .form-label{
-    padding-left: 10%;
-    }
-    .branding-1 ul {
-    margin-left: 10%;
-    }
 /* Skill */
 
     .skill {
         position: relative;
         overflow: hidden;
-        height: 170vh;
+        height: 130vh;
         width: 100%;
         /* background-color: rgb(216, 181, 24); */
     }
@@ -155,44 +141,39 @@
     }
     .skill-box-4 {
         color: rgb(245, 235, 235);
-        top: 40%;
-        right:  15%;
-    }
-    .skill-box-1 {
-        top: -5%;
-        left: 5%;
+        top: 35%;
+        right:  10%;
     }
     .skill-box-2 {
-        top: 5%;
-        right: 15%;
+        top: 0;
+        right: 10%;
     }
     .skill-box-3 {
-        top: 30%;
-        left: 5%;
+        top: 25%;
+        left: 0;
     }
 
     /* Portfolio */
 
     .portfolio{
         background-color: #0e0d0d;
-        min-height: 280vh;
+        min-height: 180vh;
         position: relative;
     }
     
     .container-portfolio{
-        height: 250vh;
+        height: 170vh;
         position: relative;
     }
     .port-responsive{
-        background-color: rgba(255, 255, 255, 0.158);
+        background-color: rgb(0, 0, 0);
         margin: 5% 0;
         border-radius: 0;
         position: absolute;
         transform: rotate(0deg);
         top: 5%;
-        left: 10%;
-        width: 80%;
-        text-align: center;
+        left: 0;
+        width: 100%;
         border-radius: 5px;
         z-index: 12121212;
     }
@@ -270,9 +251,9 @@
 
  @media screen and (min-width: 768px) and (max-width: 990px)  {
 
-    * {
+    /* * {
         border: 2px solid red;
-    }
+    } */
     /* Navbar */
     
     span , .navbar-toggler-icon .fa, .fas {
