--- a/assets/responsive.css
+++ b/assets/responsive.css
@@ -1,4 +1,4 @@
-@media screen and (min-width: 320px) and (max-width: 765px){ 
+@media screen and (min-width: 320px) and (max-width: 720px){ 
   
     body {
         position: relative;
@@ -211,9 +211,7 @@
         
     /* Contact */
     .contact {
-        /* height: 100vh; */
         position: relative;
-        /* width: 100%; */
     }
     .contact-sec{
         background-color: rgb(216, 181, 24);
@@ -269,22 +267,19 @@
 
  }
 
- @media screen and (min-width: 768px) and (max-width: 990px)  {
+ @media screen and (min-width: 758px) and (max-width: 990px)  {
 
-    * {
+    /* * {
         border: 2px solid red;
-    }
+    } */
     /* Navbar */
-    
     span , .navbar-toggler-icon .fa, .fas {
      color: rgb(214, 195, 88);
      }
      .navbar-nav {
         padding-left:0;
     }
-  
     /* header */
-
     .header{
         position: relative;
         overflow: hidden;
@@ -314,12 +309,18 @@
 
     /* About */
     .about{
-        min-height: 60vh;
-        width: 100%;
+        min-height: 160vh;
     }
     .container-about{
         width: 90%;   
         left: 5%; 
+    }
+    .about-title{
+        top: 5%;
+        left: -12%;
+        width: 45%;
+        font-family: 'Roboto', sans-serif;
+        font-weight: 800;
     }
     .container-about .col-md-8{
         width: 100%;
@@ -332,7 +333,7 @@
     .container-about .branding-ip{
         position: absolute;
         top: 80%;
-        left: 25%;
+        left: 20%;
         width: 100%;
     }
     .about .container-about h2{
@@ -350,7 +351,7 @@
 
    
    .skill {
-    height: 60vh;
+    height:180vh;
     width: 100%;
     /* background-color: rgb(216, 181, 24); */
     }
@@ -366,7 +367,8 @@
         text-align: center;
     }
     .skill-1 h6 {
-        font-size: 2em;
+        font-size: 1.3em;
+        font-family: 'Rubik', sans-serif;
          }
     .portfolio-title{
         width: 60%;
@@ -418,50 +420,52 @@
 
     .sb {
         top: -10%;
-        width: 200px;
-        height: 200px;
+        width: 50%;
+        height: 45%;
     }
     .sb a i {
-        font-size: 50px;
-        margin-left: 50px;
-        margin-top: 10px;
+        font-size: 4em;
+    }
+    .skill-box-1 {
+        top: -40%;
+        right:  60%;
     }
     .skill-box-4 {
         color: rgb(245, 235, 235);
-        top: 38%;
+        top: 25%;
         right:  3%;
     }
     .skill-box-2 {
-        top: 0;
+        top: -25%;
         right: 3%;
     }
     .skill-box-3 {
-        top: 30%;
-        left: 0;
+        top: 10%;
+        left:  -15%;
     }
 
       /* Portfolio */
 
     .portfolio{
-        background-color: #0e0d0d;
-        min-height: 120vh;
+        min-height: 330vh;
         position: relative;
     }
     
     .container-portfolio{
-        height: 120vh;
+        height: 310vh;
         width: 100%;
         position: relative;
     }
     .port-responsive{
-        background-color: rgb(0, 0, 0);
+        background-color: rgba(255, 255, 255, 0.158);
         margin: 5% 0;
         border-radius: 0;
         position: absolute;
         transform: rotate(0deg);
         top: 5%;
-        left: 0;
-        width: 100%;
+        left: 10%;
+        width: 80%;
+        text-align: center;
         border-radius: 5px;
         z-index: 12121212;
     }
